--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
 <!--JS files to animate the webiste-->
-<script type="text/javascript" src="assets/js/FancyNavBarEffect(FIX).js"></script>  
+<script type="text/javascript" src="assets/js/NavBar.js"></script>  
 <script src='https://kit.fontawesome.com/a076d05399.js' crossorigin='anonymous'></script>
 
 </head>
